tests/NormalTests/paczka1/small_fuzzy/21206525.err
Error in line 1: GiC06tENG S145 50,0
Error in line 4: A735 S145 24,6
Error in line 12: GiC06tENG A149 -1,1
Error in line 5: pmZhDE3N44e A735 54,7
